--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
 :root {
     --text-color: hsl(115deg 42% 80%);
     --bg-color: hsl(115deg 52% 13%);
-    --bg-content: hsl(115deg 52% 23%);
+    --bg-content: hsla(115deg,52%,23%,0.8);
+    --bg-menu: hsl(115deg,52%,23%);
 }
 
 body {
@@ -28,9 +29,13 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    line-height: 2rem;
     color: var(--text-color);
     background-color: var(--bg-color);
-    line-height: 1.5rem;
+    background-image: url(assets/lt-pattern.svg);
+    background-attachment: fixed;
+    background-size: 180px 250px;
 }
 
 a {
@@ -50,7 +55,7 @@ nav {
     top: 0;
     width: 100%;
     margin: 0 auto;
-    background-color: var(--bg-content);
+    background-color: var(--bg-menu);
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5);
 }
 nav a:first-child {
@@ -60,7 +65,7 @@ nav a + a {
     margin-left: 20px;
 }
 section {
-    padding: 50px 32px 0;
+    padding: 72px 32px 0;
     margin: 0 auto;
     max-width: 1024px;
     width: 100%;
@@ -70,6 +75,20 @@ section {
 section h1 {
     display: flex;
     align-items: center;
+}
+
+h1, h2, .fancy {
+    font-family: Oregano, serif;
+}
+h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+}
+h2 {
+    font-size: 2rem;
+}
+.fancy {
+    font-size: 2rem;
 }
 
 section img {
@@ -109,11 +128,90 @@ section img {
         float: right;
         position: relative;
         margin-left: auto;
-        height: 24px;
-        width: 24px;
+        height: 4rem;
+        width: 4rem;
         flex-shrink: 0;
     }
     section img {
         height: 300px;
     }
+}
+
+.carousel {
+    background: black;
+}
+
+.carousel-cell {
+    width: 70%;
+    height: 200px;
+    /* flex-box, center image in cell */
+    display: -webkit-box;
+    display: -webkit-flex;
+    display:         flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+            justify-content: center;
+    -webkit-align-items: center;
+            align-items: center;
+}
+
+.carousel-cell img {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    /* dim unselected */
+    opacity: 0.7;
+    -webkit-transform: scale(0.85);
+            transform: scale(0.85);
+    -webkit-filter: blur(5px);
+            filter: blur(5px);
+    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s, transform 0.3s, -webkit-filter 0.3s, filter 0.3s;
+            transition: opacity 0.3s, transform 0.3s, filter 0.3s;
+}
+
+/* brighten selected image */
+.carousel-cell.is-selected img {
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-filter: none;
+            filter: none;
+}
+
+@media screen and ( min-width: 768px ) {
+    .carousel-cell {
+        height: 400px;
+    }
+}
+
+@media screen and ( min-width: 960px ) {
+    .carousel-cell {
+        width: 60%;
+    }
+}
+
+/* buttons, no circle */
+.flickity-prev-next-button {
+    width: 60px;
+    height: 60px;
+    background: transparent;
+    opacity: 0.6;
+}
+.flickity-prev-next-button:hover {
+    background: transparent;
+    opacity: 1;
+}
+/* arrow color */
+.flickity-prev-next-button .arrow {
+    fill: white;
+}
+.flickity-prev-next-button.no-svg {
+    color: white;
+}
+/* closer to edge */
+.flickity-prev-next-button.previous { left: 0; }
+.flickity-prev-next-button.next { right: 0; }
+/* hide disabled button */
+.flickity-prev-next-button:disabled {
+    display: none;
 }
