--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ nav {
     position: fixed;
     display: flex;
     align-items: center;
+    z-index: 1;
     padding: 20px;
     top: 0;
     width: 100%;
